# kairos-extract

./: .gitignore  README.md  pyproject.toml
kairos_extract/: __init__.py  config_model.py  engine.py  reconcile.py
kairos_extract/locators/: __init__.py  fixed.py
tests/: _harness.py  run_all.py  test_extract.py  textgen.py
