[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos-extract"
version = "1.0.0"
description = "Kairos brick: extract — zonal/template field extraction with reconciliation. Injects the ocr brick."
requires-python = ">=3.11"
dependencies = [
    "kairos-core>=1.0",
    "kairos-ocr>=1.0",    # injected sub-brick (OCR per crop)
    "pillow>=10",
    "pymupdf>=1.24",      # rasterize PDF inputs
]

[tool.setuptools.packages.find]
include = ["kairos_extract*"]

[project.entry-points."kairos.bricks"]
extract = "kairos_extract"
